--- a/PSs/pom.xml
+++ b/PSs/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>springboot-thymeleaf-crud-web-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springboot-thymeleaf-crud-web-app</name>
-	<description>Demo project for Spring Boot and thymeleaf</description>
+	<description>Spring boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -53,6 +53,16 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
 		</dependency>
 	</dependencies>
 
