--- a/PSs/src/main/resources/application.properties
+++ b/PSs/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=alicja
+spring.datasource.password=test
 
 # Hibernate
 
@@ -14,4 +14,3 @@ spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
-server.port=8081
