--- a/PSs/src/main/resources/application.properties
+++ b/PSs/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 # spring.datasource.password=test
-spring.datasource.password=test
+spring.datasource.password=alicja
 
+server.port=8081
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Hibernate
