--- a/PSs/src/main/resources/application.properties
+++ b/PSs/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-#spring.datasource.password=test
-spring.datasource.password=alicja
+spring.datasource.password=test
+#spring.datasource.password=alicja
 
-server.port=8081
+#server.port=8081
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Hibernate
